[package]
name = "treasury-api"
version = "0.0.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/treasury-api"
homepage = "https://github.com/zakarumych/treasury"
repository = "https://github.com/zakarumych/treasury"
readme = "../README.md"
keywords = ["assets", "gamedev"]
categories = ["game-development"]
description = "API for treasury server"

[dependencies]
treasury-id = { version = "0.0.0", path = "../id" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["net", "io-util"] }
eyre = "0.6"

