[package]
name = "treasury-cli"
version = "0.0.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/treasury-cli"
homepage = "https://github.com/zakarumych/treasury"
repository = "https://github.com/zakarumych/treasury"
readme = "../README.md"
keywords = ["assets", "gamedev", "cli"]
categories = ["game-development", "command-line-utilities"]
description = "Command Line Interface for treasury client"

[dependencies]
treasury-client = { version = "0.0.0", path = "../client" }

url = "2.0"
eyre = "0.6"
color-eyre = "0.6"
clap = "2.33"
tokio = { version = "1.0", features = ["rt", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
dunce = "1.0"
