[package]
name = "treasury-client"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/treasury-client"
homepage = "https://github.com/arcana-engine/treasury"
repository = "https://github.com/arcana-engine/treasury"
readme = "../README.md"
keywords = ["assets", "gamedev"]
categories = ["game-development"]
description = "Client for treasury"

[dependencies]
treasury-api = { version = "=0.1.0", path = "../api" }
treasury-id = { version = "=0.1.0", path = "../id" }

url = { version = "2.2", features = ["serde"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
tokio = { version = "1.0", features = ["net", "io-util", "time"] }
eyre = "0.6"
