[package]
name = "treasury-id"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zaq.dev@icloud.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/treasury-id"
homepage = "https://github.com/zakarumych/treasury"
repository = "https://github.com/zakarumych/treasury"
readme = "../README.md"
keywords = ["assets", "gamedev"]
categories = ["game-development"]
description = "ID generator for treasury"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"