[package]
name = "treasury-import"
version = "0.0.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/treasury-import"
homepage = "https://github.com/zakarumych/treasury"
repository = "https://github.com/zakarumych/treasury"
readme = "../README.md"
keywords = ["assets", "gamedev"]
categories = ["game-development"]
description = "FFI for treasury importers"

[dependencies]
treasury-id = { version = "0.0.0", path = "../id" }
tracing = { version = "0.1", default-features = false }
